(ui) Fix issue with high contrast theme

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -224,9 +224,11 @@
         a {
           color: var(--textOnAccentColor);
 
-          &:hover {
-            color: var(--lighterAccentColor);
-            text-decoration: none;
+          @media (hover: hover) {
+            &:hover {
+              filter: brightness(1.25);
+              text-decoration: none;
+            }
           }
         }
       }
